--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,11 +1,9 @@
 #  The contact options.
 
 -
-  type: github
-  icon: 'fab fa-github-alt'
--
-  type: twitter
-  icon: 'fab fa-twitter'
+  type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://www.linkedin.com/in/hfadeel/'                  # Fill with your Linkedin homepage
 -
   type: email
   icon: 'fas fa-envelope'
