--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Haytham ElFadeel                          # the main title
 
 tagline:  # it will display as the sub-title
 
-description: 
+description:
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://hfadeel.github.io/'
@@ -79,7 +79,7 @@ theme_mode:   light # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: /assets/img/favicons/android-chrome-512x512.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
